intervalsets-macros/tests/ui/missing_brackets.stderr
error: malformed interval syntax: expected one of `[a, b]` `(a, b)` `[a, b)` `(a, b]` `[a, ..)` `(a, ..)` `(.., a]` `(.., a)` `(.., ..)` or `{}`
 --> tests/ui/missing_brackets.rs:4:23
  |
4 |     let _ = interval!("0, 10");
  |                       ^^^^^^^
